test/scripted/compilation/errors/move_out_pointer.bnj
# test:common

struct Resource {
    func __deinit__(self) {}
}

# test:subtest
# test:error 13:13 "cannot move resource out of pointer"

func main() {
    var resource = Resource {};
    var pointer = &resource;
    var a = *pointer;
}

# test:subtest
# test:error 22:13 "cannot move resource out of pointer"

func main() {
    var resource = (100, true, Resource {}); 
    var pointer = &resource;
    var a = *pointer;
}

# test:subtest
# test:error 40:13 "cannot move resource out of pointer"

struct Pair {
    var a: f32;
    var b: Resource;
}

func main() {
    var pair = Pair {
        a: 10.5,
        b: Resource {},
    };
    
    var pointer = &pair;
    var a = *pointer;
}

# test:subtest
# test:error 62:13 "cannot move resource out of pointer"

struct Wrapper {
    var resource: Resource;
}

struct Object {
    var wrapper: Wrapper;
}

func main() {
    var object = Object {
        wrapper: Wrapper {
            resource: Resource {},
        },
    };

    var pointer = &object;
    var a = pointer.wrapper.resource;
}

# test:subtest
# test:error 87:13 "cannot move resource out of pointer"

struct Wrapper {
    var resource: Resource;
}

struct Object {
    var tuple: (i32, Wrapper);
}

func main() {
    var object = Object {
        tuple: (
            0,
            Wrapper {
                resource: Resource {},
            },
        ),
    };

    var pointer = &object;
    var a = (pointer.tuple.1).resource;  # TODO: Fix lexer
}